--- a/css/myfirstexternal.css
+++ b/css/myfirstexternal.css
@@ -1,8 +1,9 @@
 .card {
   border: 0px solid black;
-  border-radius: 24px;
+  background-color: #232328;
+  border-radius: 0px;
   /* offset-x, offset-y, blur-radius, spread-radius */
-  box-shadow: 10px 10px 12px 5px rgba(24, 45, 100, 0.4);
+  box-shadow: 5px 5px 12px 2px rgba(56, 60, 71, 0.4);
   margin: 24px;
   margin-top: 40px;
   margin-bottom: 40px;
