--- a/assignments/George R. R. Martin/css/Martin.css
+++ b/assignments/George R. R. Martin/css/Martin.css
@@ -31,6 +31,11 @@ nav ul li {
 
 main {
   grid-area: blog;
+  border: 3px solid darkgrey;
+}
+
+footer {
+  grid-area: footer;
 }
 
 .grid {
@@ -38,13 +43,13 @@ main {
     grid-template-columns: 1fr 333px 334px 333px 1fr;
     grid-auto-rows: minmax(50px, auto);
     grid-template-areas:
-        ". header  header  header  ."
-        ". nav     nav     nav     ."
-        ". banner  banner  banner  ."
-        ". card    card    card    ."
-        ". sidenav blog    blog    ."
-        ". footer  footer  footer  ."
-        ". bottom  bottom  bottom  .";
+        "gutter1 header  header  header  gutter2"
+        "gutter1 nav     nav     nav     gutter2"
+        "gutter1 banner  banner  banner  gutter2"
+        "gutter1 card    card    card    gutter2"
+        "gutter1 sidenav blog    blog    gutter2"
+        "gutter1 footer  footer  footer  gutter2"
+        "gutter1 bottom  bottom  bottom  gutter2";
 }
 
 #shield {
@@ -55,22 +60,85 @@ main {
   width: 65px;
 }
 
+#shield:hover {
+  background-image: url("../../../images/spin.gif")
+}
+
 #banner {
   grid-area: banner;
   background-image: url("../../../images/GRRM_slide.jpeg");
-  height: 304px;
-  width: 958px;
+  background-position: center;
+  background-size: cover;
+  height: 310px;
+  border: 3px solid grey;
 }
 
 #card {
   grid-area: card;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
 #card img {
   flex: 1;
+  border: 3px solid grey;
+}
+
+#NextAppearance {
+  font-family: 'Montaga', serif;
+  text-align: left;
+  color: white;
+  background-image: url("../../../images/events-bg.jpeg");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  padding: 20px 10px;
+  border: 3px solid grey;
+}
+
+#NextPublication {
+  font-family: 'Montaga', serif;
+  text-align: left;
+  color: white;
+  background-image: url("../../../images/releases-bg.jpeg");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  height: 246px;
+  padding: 20px 10px;
+  border: 3px solid grey;
+}
+
+#Valyrian {
+  width: 306px;
+  border: 3px solid grey;
+}
+
+#stageCoach {
+  width: 306px;
+  border: 3px solid grey;
+}
+
+#sidenav {
+  grid-area: sidenav;
+}
+
+#bottom {
+  background-image: url("../../../images/footer-bg.jpeg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  grid-area: bottom;
+  height: 120px;
+}
+
+#gutter1 {
+  grid-area: gutter1;
+  border-right: 3px solid grey;
+  margin-right: 8px;
+}
+
+#gutter2 {
+  grid-area: gutter2;
+  border-left: 3px solid grey;
+  margin-left: 8px;
 }
 
 @media screen and (max-width: 1000px) {
