--- a/assignments/George R. R. Martin/css/Martin.css
+++ b/assignments/George R. R. Martin/css/Martin.css
@@ -1,5 +1,6 @@
 body {
-  background-color: lightgrey;
+  background-image: url(../../../images/content-bg.jpeg);
+  background-position: center 400px;
 }
 
 h1 {
@@ -32,6 +33,7 @@ nav ul li {
 main {
   grid-area: blog;
   border: 3px solid darkgrey;
+  padding: 20px 26px 10px;
 }
 
 footer {
@@ -43,8 +45,8 @@ footer {
     grid-template-columns: 1fr 333px 334px 333px 1fr;
     grid-auto-rows: minmax(50px, auto);
     grid-template-areas:
-        "gutter1 header  header  header  gutter2"
-        "gutter1 nav     nav     nav     gutter2"
+        ".       header  header  header        ."
+        ".       nav     nav     nav           ."
         "gutter1 banner  banner  banner  gutter2"
         "gutter1 card    card    card    gutter2"
         "gutter1 sidenav blog    blog    gutter2"
@@ -77,11 +79,15 @@ footer {
   grid-area: card;
   display: flex;
   flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 #card img {
   flex: 1;
+  padding: 6px 5px 5px 5px;
   border: 3px solid grey;
+  background-image: url("../../../images/callout-bg-2.jpeg");
 }
 
 #NextAppearance {
@@ -93,6 +99,24 @@ footer {
   background-position: right bottom;
   padding: 20px 10px;
   border: 3px solid grey;
+}
+
+.callout_bg {
+  background-image: url(../../../images/artist-bg.jpeg);
+  background-repeat: no-repeat;
+  text-align: center;
+  padding: 6px 6px 2px 9px;
+  width: 311px;
+}
+
+#NextAppearance h3, #date, #location {
+  padding: 0 15px;
+  line-height: 18px;
+  margin-bottom: 10px;
+}
+
+#location {
+  margin-bottom: 1.625em;
 }
 
 #NextPublication {
@@ -119,6 +143,7 @@ footer {
 
 #sidenav {
   grid-area: sidenav;
+  display: block;
 }
 
 #bottom {
@@ -131,14 +156,14 @@ footer {
 
 #gutter1 {
   grid-area: gutter1;
-  border-right: 3px solid grey;
-  margin-right: 8px;
+  border-right: 5px solid grey;
+  margin-right: 0px;
 }
 
 #gutter2 {
   grid-area: gutter2;
-  border-left: 3px solid grey;
-  margin-left: 8px;
+  border-left: 5px solid grey;
+  margin-left: 0px;
 }
 
 @media screen and (max-width: 1000px) {
