--- a/assignments/georgerrmartin/css/Martin.css
+++ b/assignments/georgerrmartin/css/Martin.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../../images/content-bg.jpeg");
+  background-image: url("../../../images/content-bg.jpeg");
   background-position: center 400px;
 }
 
@@ -10,6 +10,12 @@ h1 {
 
 header {
   display: flex;
+  background-image: url("../../../images/header-bg.jpeg");
+  padding-bottom: 0px;
+  position: relative;
+  background-position: center top;
+  height: 138px;
+  background-repeat: no-repeat;
   flex-direction: row;
   grid-area: header;
 }
@@ -23,6 +29,7 @@ nav ul {
   flex-direction: row;
   list-style-type: none;
   padding: 0;
+  margin: 1px auto 0px;
 }
 
 nav ul li {
@@ -30,14 +37,43 @@ nav ul li {
   text-align: center;
 }
 
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
 main {
   grid-area: blog;
+  font-weight: normal;
+  text-align: left;
+  font-family: 'Montaga', serif;
   border: 3px solid darkgrey;
-  padding: 20px 26px 10px;
+}
+
+main h3 a {
+  text-decoration: none;
+  color: #1c4268;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+main p {
+  font-family: 'helvetica neue', helvetica, arial, sans-serif;
+  line-height: 1.4em;
+  font-size: 14px;
 }
 
 footer {
   grid-area: footer;
+}
+
+div img {
+  border: 0px;
+}
+
+a {
+  color: #1c4268;
+  text-decoration: underline;
 }
 
 .grid {
@@ -55,7 +91,7 @@ footer {
 }
 
 #shield {
-  background-image: url("../../images/shield-spin.jpeg");
+  background-image: url("../../../images/shield-spin.jpeg");
   background-position: left top;
   background-size: cover;
   height: 75px;
@@ -64,12 +100,19 @@ footer {
 }
 
 #shield:hover {
-  background-image: url("../../images/spin.gif")
+  background-image: url("../../../images/spin.gif")
+}
+
+#social {
+  display: inline-block;
+  vertical-align: top;
+  height: 102px;
+  width: auto;
 }
 
 #banner {
   grid-area: banner;
-  background-image: url("../../images/GRRM_slide.jpeg");
+  background-image: url("../../../images/GRRM_slide.jpeg");
   background-position: center;
   background-size: cover;
   height: 310px;
@@ -88,14 +131,14 @@ footer {
   flex: 1;
   padding: 6px 5px 5px 5px;
   border: 3px solid grey;
-  background-image: url("../../images/callout-bg-2.jpeg");
+  background-image: url("../../../images/callout-bg-2.jpeg");
 }
 
 #NextAppearance {
   font-family: 'Montaga', serif;
   text-align: left;
   color: white;
-  background-image: url("../../images/events-bg.jpeg");
+  background-image: url("../../../images/events-bg.jpeg");
   background-repeat: no-repeat;
   background-position: right bottom;
   padding: 20px 10px;
@@ -124,12 +167,16 @@ footer {
   font-family: 'Montaga', serif;
   text-align: left;
   color: white;
-  background-image: url("../../images/releases-bg.jpeg");
+  background-image: url("../../../images/releases-bg.jpeg");
   background-repeat: no-repeat;
   background-position: right bottom;
   height: 246px;
   padding: 20px 10px;
   border: 3px solid grey;
+}
+
+#news {
+  padding: 20px 26px 10px;
 }
 
 #Valyrian {
@@ -139,16 +186,16 @@ footer {
 
 #stageCoach {
   width: 306px;
-  border: 3px solid grey;
 }
 
 #sidenav {
   grid-area: sidenav;
   display: block;
+  width: 326px;
 }
 
 #bottom {
-  background-image: url("../../images/footer-bg.jpeg");
+  background-image: url("../../../images/footer-bg.jpeg");
   background-position: center top;
   background-repeat: no-repeat;
   grid-area: bottom;
