--- a/assignments/georgerrmartin/css/Martin.css
+++ b/assignments/georgerrmartin/css/Martin.css
@@ -47,7 +47,6 @@ main {
   font-weight: normal;
   text-align: left;
   font-family: 'Montaga', serif;
-  border: 3px solid darkgrey;
 }
 
 main h3 a {
@@ -146,7 +145,7 @@ a {
 }
 
 .callout_bg {
-  background-image: url("../../images/artist-bg.jpeg");
+  background-image: url("../../../images/artist-bg.jpeg");
   background-repeat: no-repeat;
   text-align: center;
   padding: 6px 6px 2px 9px;
@@ -181,7 +180,6 @@ a {
 
 #Valyrian {
   width: 306px;
-  border: 3px solid grey;
 }
 
 #stageCoach {
