--- a/assignments/georgerrmartin/css/Martin.css
+++ b/assignments/georgerrmartin/css/Martin.css
@@ -1,6 +1,5 @@
 body {
-  background-image: url("../../../images/content-bg.jpeg");
-  background-position: center 400px;
+  margin: 0px;
 }
 
 h1 {
@@ -14,7 +13,7 @@ header {
   padding-bottom: 0px;
   position: relative;
   background-position: center top;
-  height: 138px;
+  height: 134px;
   background-repeat: no-repeat;
   flex-direction: row;
   grid-area: header;
@@ -28,13 +27,13 @@ nav ul {
   display: flex;
   flex-direction: row;
   list-style-type: none;
-  padding: 0;
-  margin: 1px auto 0px;
+  padding-left: 0;
 }
 
 nav ul li {
   flex: 1;
   text-align: center;
+  font-family: 'Montaga', serif;
 }
 
 nav a {
@@ -47,6 +46,7 @@ main {
   font-weight: normal;
   text-align: left;
   font-family: 'Montaga', serif;
+  margin-left: 6px;
 }
 
 main h3 a {
@@ -64,6 +64,16 @@ main p {
 
 footer {
   grid-area: footer;
+  background-image: url("../../../images/footer-bg.jpeg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 13px 0px 120px 0px;
+  color: black;
+  min-width: 1000px;
 }
 
 div img {
@@ -80,13 +90,30 @@ a {
     grid-template-columns: 1fr 333px 334px 333px 1fr;
     grid-auto-rows: minmax(50px, auto);
     grid-template-areas:
-        ".       header  header  header        ."
-        ".       nav     nav     nav           ."
-        "gutter1 banner  banner  banner  gutter2"
-        "gutter1 card    card    card    gutter2"
-        "gutter1 sidenav blog    blog    gutter2"
-        "gutter1 footer  footer  footer  gutter2"
-        "gutter1 bottom  bottom  bottom  gutter2";
+        ". header  header  header  ."
+        ". nav     nav     nav     ."
+        ". banner  banner  banner  ."
+        ". card    card    card    ."
+        ". sidenav blog    blog    ."
+        ". footer  footer  footer  .";
+}
+
+.blog-bg {
+  background-image: url("../../../images/columns-home.jpeg");
+  grid-column: 2/4;
+  grid-row: 5/6;
+  margin-left: 13px;
+  width: 968px;
+  height: auto;
+  box-sizing: border-box;
+}
+
+#grid {
+  background-image: url("../../../images/content-bg.jpeg");
+  background-repeat: repeat-y;
+  background-position: center 138px;
+  min-width: 1000px;
+  margin: 0 auto;
 }
 
 #shield {
@@ -103,33 +130,54 @@ a {
 }
 
 #social {
-  display: inline-block;
-  vertical-align: top;
+  display: inline;
+  vertical-align: middle;
   height: 102px;
   width: auto;
 }
 
+#social div {
+  text-align: right;
+  margin: 16px 0px 0px 0px;
+}
+
+#social a {
+  text-decoration: none;
+}
+
+#social a img {
+  margin: 0px;
+}
+
 #banner {
   grid-area: banner;
-  background-image: url("../../../images/GRRM_slide.jpeg");
-  background-position: center;
-  background-size: cover;
-  height: 310px;
-  border: 3px solid grey;
+  background-image: url("../../../images/callout-1.jpeg");
+  background-repeat: no-repeat;
+  text-align: center;
+  padding: 7px;
+  margin: 0 auto;
+}
+
+#banner img {
+  width: 958px;
+  height: 304px;
 }
 
 #card {
   grid-area: card;
   display: flex;
   flex-direction: row;
+  flex: 1;
+  justify-content: left;
+  box-sizing: border-box;
   margin-top: 15px;
   margin-bottom: 15px;
+  margin-left: 16px;
 }
 
 #card img {
-  flex: 1;
+  width: 312px;
   padding: 6px 5px 5px 5px;
-  border: 3px solid grey;
   background-image: url("../../../images/callout-bg-2.jpeg");
 }
 
@@ -140,6 +188,7 @@ a {
   background-image: url("../../../images/events-bg.jpeg");
   background-repeat: no-repeat;
   background-position: right bottom;
+  box-sizing: border-box;
   padding: 20px 10px;
   border: 3px solid grey;
 }
@@ -169,6 +218,7 @@ a {
   background-image: url("../../../images/releases-bg.jpeg");
   background-repeat: no-repeat;
   background-position: right bottom;
+  box-sizing: border-box;
   height: 246px;
   padding: 20px 10px;
   border: 3px solid grey;
@@ -179,37 +229,35 @@ a {
 }
 
 #Valyrian {
-  width: 306px;
+  box-sizing: border-box;
+}
+
+#Valyrian img {
+  width: 311px;
 }
 
 #stageCoach {
-  width: 306px;
+  box-sizing: border-box;
+}
+
+#Stagecoach img {
+  width: 311px;
 }
 
 #sidenav {
   grid-area: sidenav;
   display: block;
   width: 326px;
+  margin-left: 13px;
 }
 
-#bottom {
-  background-image: url("../../../images/footer-bg.jpeg");
-  background-position: center top;
-  background-repeat: no-repeat;
-  grid-area: bottom;
-  height: 120px;
+#news_title {
+  box-sizing: border-box;
 }
 
-#gutter1 {
-  grid-area: gutter1;
-  border-right: 5px solid grey;
-  margin-right: 0px;
-}
-
-#gutter2 {
-  grid-area: gutter2;
-  border-left: 5px solid grey;
-  margin-left: 0px;
+#notablog img {
+  margin: 15px 0px;
+  width: 208px;
 }
 
 @media screen and (max-width: 1000px) {
