--- a/assignments/georgerrmartin/css/Martin.css
+++ b/assignments/georgerrmartin/css/Martin.css
@@ -5,17 +5,23 @@ body {
 h1 {
   font-family: 'Montaga', serif;
   font-weight: lighter;
+  font-size: 60px;
+  color: #1c4268;
+  margin-right: 40px;
+  margin-bottom: 0px;
+  margin-top: 20px;
 }
 
 header {
-  display: flex;
   background-image: url("../../../images/header-bg.jpeg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  height: 134px;
+  display: flex;
   padding-bottom: 0px;
   position: relative;
-  background-position: center top;
-  height: 134px;
-  background-repeat: no-repeat;
   flex-direction: row;
+  justify-content: flex-start;
   grid-area: header;
 }
 
@@ -101,7 +107,7 @@ a {
 .blog-bg {
   background-image: url("../../../images/columns-home.jpeg");
   grid-column: 2/4;
-  grid-row: 5/6;
+  grid-row: 5/5;
   margin-left: 13px;
   width: 968px;
   height: auto;
@@ -110,10 +116,10 @@ a {
 
 #grid {
   background-image: url("../../../images/content-bg.jpeg");
+  background-size: auto;
   background-repeat: repeat-y;
-  background-position: center 138px;
+  background-position: center;
   min-width: 1000px;
-  margin: 0 auto;
 }
 
 #shield {
@@ -122,7 +128,7 @@ a {
   background-size: cover;
   height: 75px;
   width: 65px;
-  margin: 18px 0px 0px 27px;
+  margin: 18px 24px 0px 27px;
 }
 
 #shield:hover {
@@ -130,8 +136,11 @@ a {
 }
 
 #social {
-  display: inline;
-  vertical-align: middle;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
   height: 102px;
   width: auto;
 }
@@ -146,7 +155,7 @@ a {
 }
 
 #social a img {
-  margin: 0px;
+  margin: 3px;
 }
 
 #banner {
@@ -224,6 +233,18 @@ a {
   border: 3px solid grey;
 }
 
+#NextPublication h3 {
+  padding: 0 15px;
+  line-height: 18px;
+  margin-bottom: 10px;
+}
+
+#message {
+  padding: 0 15px;
+  line-height: 18px;
+  margin-bottom: 34px;
+}
+
 #news {
   padding: 20px 26px 10px;
 }
@@ -263,23 +284,73 @@ a {
 @media screen and (max-width: 1000px) {
     .grid {
       display: grid;
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 2fr 1fr;
+      grid-auto-rows: minmax(20px, auto);
       grid-template-areas:
-          "header"
-          "nav"
-          "banner"
-          "card"
-          "blog"
-          "sidenav"
-          "footer"
-          "bottom"
+          ". header  ."
+          ". nav     ."
+          ". banner  ."
+          ". card    ."
+          ". blog    ."
+          ". sidenav ."
+          ". footer  ."
+    }
+
+    h1 {
+      font-weight: lighter;
+      font-size: 40px;
+      margin-right: 0px;
+      margin-top: 20px;
+    }
+
+    main {
+      text-align: center;
+      width: 50%;
+    }
+
+    .blog-bg {
+      grid-column: 2/3;
+      grid-row: 5/5;
+      width: 400px;
+    }
+
+    #banner {
+      width: 600px;
+    }
+
+    #card img {
+      width: 234px;
+    }
+
+    #social {
+      display: inline-block;
+    }
+
+    #news {
+      padding: 20px 26px 10px;
+    }
+
+    header {
+      height: 150px;
+      display: inline-block;
+      text-align: center;
+    }
+
+    nav {
+      text-align: center;
     }
 
     nav ul {
-      flex-direction: column;
+      margin: auto;
+      display: block;
     }
 
-    #card {
-      flex-direction: column;
+    nav ul li {
+      margin: 30px 0px 30px 0px;
     }
+
+    #shield {
+      display: none;
+    }
+
 }
