--- a/css/Portfolio-home.css
+++ b/css/Portfolio-home.css
@@ -188,64 +188,23 @@ body {
   grid-area: Contact3;
 }
 
-@media screen and (max-width: 600px) {
-  .gallery_pages {
-    padding: 0px;
-  }
-
-  .examples_title {
-    background-color: #232328;
-    border-top: 2px solid #ffcc00;
-    display: block;
-    margin: 0px;
-    height: 50px;
-  }
-
-  #workExamples {
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-    margin: 0px;
-  }
+@media screen and (max-width: 700px) {
 
   .image_grid {
     padding: 60px;
     position: relative;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
   #selected {
-    display: inline-block;
-    color: rgba(0, 153, 153, 1);
-    background-color: rgba(56, 60, 71, 0.5);
-    border: 1px solid; padding: 10px;
     font-size: 18px;
-    width: auto;
-    margin: 10px;
-    list-style: outside none none;
-  }
-
-  .left_link {
-    list-style-type: none;
   }
 
   #logo {
-    color: rgba(255, 204, 0, 0);
-    font-size: 24px;
     display: none;
-    position: absolute;
-    left: 40%;
-    transform: translate(-30%, -50%);
-    top: 35%;
-  }
-
-  .right_link {
-    list-style-type: none;
-    float: right;
   }
 
   .page_list {
@@ -268,13 +227,6 @@ body {
     transform-origin: center;
   }
 
-  .grid_image img:active {
-    transform: scale(1.5);
-  }
-
-  #current {
-    color: #ffcc00;
-  }
 
   #I_Block {
     background: #232328;
@@ -296,88 +248,4 @@ body {
     font-family: helveticaneue;
   }
 
-  #nav_bar ul {
-    color: white;
-    background: #232328;
-    box-shadow: 0px 2px 0px 0px #ffcc00;
-    padding-inline-start: 0px;
-    margin-top: 0px;
-    font-size: 20px;
-  }
-
-  #nav_bar ul li {
-    display: inline-flex;
-    padding: 12px 24px;
-  }
-
-  #nav_bar {
-    position: fixed;
-    z-index: 5;
-    width: 100%;
-  }
-
-  main {
-    font-family: times;
-  }
-
-  header {
-    font-family: times;
-  }
-
-  body {
-    margin: 0px;
-    background-image: url("../Space_Background.jpg");
-    background-repeat: repeat;
-    background-size: contain;
-  }
-
-  .footer {
-    border-top: 2px solid #ffcc00;
-    background-color: #232328;
-    font-size: 14px;
-    color: #ffcc00;
-    width: auto;
-    padding: 40px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    grid-auto-rows: minmax(30px, auto);
-    grid-template-areas:
-        "head head head"
-        "Line1-1 Line1-2 Line1-3"
-        "Line2-1 Line2-2 Line2-3"
-        "Line3-1 Line3-2 Line3-3"
-        "Contact Contact2 Contact3"
-        "Copyright Copyright2 Copyright3";
-    gap: 10px 10px;
-  }
-
-  #head {
-    grid-area: head;
-    font-size: 24px;
-    border-bottom: 1px solid #232328;
-  }
-  #row1 {
-    grid-area: Line1-1;
-  }
-  #row2 {
-    grid-area: Line2-1;
-  }
-  #row3 {
-    grid-area: Line3-1;
-  }
-  #row1-2 {
-    grid-area: Line1-2;
-  }
-  #row2-2 {
-    grid-area: Line2-2;
-  }
-  #phone {
-    grid-area: Contact2;
-  }
-  #email {
-    grid-area: Contact;
-  }
-  #insta {
-    grid-area: Contact3;
-  }
 }
