--- a/css/contact-page.css
+++ b/css/contact-page.css
@@ -59,11 +59,13 @@ body {
 
 #contact-grid {
   background-color: #232328;
+  border: 3px groove rgb(0, 155, 155);
   border-radius: 10px;
   color: white;
   width: 50%;
   margin: auto;
   padding: 25px;
+  box-sizing: border-box;
   margin-bottom: 50px;
   text-align: center;
   display: grid;
@@ -77,6 +79,13 @@ body {
       ". phone   phone   ."
       ". comment comment ."
       ". submit  submit  ."
+}
+
+#contact-grid p {
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(0, 155, 155);
+  padding-top: 10px;
+  border-top: 1px solid rgb(0, 155, 155);
 }
 
 #submitButton {
@@ -101,6 +110,8 @@ body {
   height: 30px;
   width: 300px;
   font-size: 16px;
+  box-shadow: inset 1px 0px 5px 0px grey;
+  border: 2px solid #ffcc00;
 }
 
 @keyframes submitColor {
@@ -140,24 +151,29 @@ body {
 
 #comment {
   grid-area: comment;
-  display: block;
+  box-sizing: content-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 10px 0px 20px 0px;
-  text-align: center;
 }
 
 #comment textarea {
   border-radius: 10px;
+  box-shadow: inset 1px 0px 5px 0px grey;
+  border: 2px solid #ffcc00;
   font-size: 14px;
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 30px;
-  height: 220px;
-  width: 412px;
+  height: 156px;
+  width: 100%;
 }
 
 .footer {
   background-color: #232328;
   border-top: 2px solid #ffcc00;
+  font-size: 14px;
   color: #ffcc00;
   width: 95%;
   padding: 30px;
@@ -211,8 +227,7 @@ body {
   }
 
   #comment textarea {
-    height: 220px;
-    width: 412px;
+    width: 95%;
   }
 
   #contact-grid {
@@ -227,14 +242,27 @@ body {
   }
 
   #comment textarea {
-    height: 220px;
-    width: 264px;
+    width: 95%;
   }
 
   #contact-grid {
     width: 60%;
+    margin: auto;
+    padding: 25px;
+    margin-bottom: 50px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(30px, auto);
+    grid-template-areas:
+        ". head    ."
+        ". message ."
+        ". name    ."
+        ". email   ."
+        ". phone   ."
+        ". comment ."
+        ". submit  ."
   }
-}
 
 
 @media screen and (max-width: 750px) {
@@ -246,6 +274,7 @@ body {
     gap: 10px 30px;
     padding: 20px;
     grid-template-columns: 1fr 1fr 2fr;
+    font-size: 12px;
   }
 
   #contact-grid {
@@ -255,7 +284,7 @@ body {
     margin-bottom: 50px;
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: minmax(30px, auto);
     grid-template-areas:
         ". head    ."
@@ -279,8 +308,7 @@ body {
   }
 
   #comment textarea {
-    height: 220px;
-    width: 236px;
+    width: 95%;
   }
 
 }
