--- a/css/about.css
+++ b/css/about.css
@@ -1,190 +1,191 @@
-@media screen and (min-width: 599px) {
-  #nav_bar ul {
-    color: white;
-    background: #232328;
-    box-shadow: 0px 2px 0px 0px #ffcc00;
-    padding-inline-start: 0px;
-    margin-top: 0px;
-    font-size: 20px;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  #nav_bar ul li {
-    display: inline-block;
-    padding: 12px 24px;
-  }
+a {
+  text-decoration: none;
+}
 
-  #nav_bar {
-    position: fixed;
-    z-index: 5;
-    width: 100%;
-  }
+#nav_whole {
+  color: white;
+  background: #232328;
+  border-bottom: 1px solid #ffcc00;
+  padding-inline-start: 0px;
+  margin-top: 0px;
+  font-size: 20px;
+  padding: 10px;
+  padding-left: 20px;
+}
 
-  .left_link {
-    list-style-type: none;
-  }
+#nav_links {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: baseline;
+  right: 0;
+  top: 0px;
+  padding: 10px 20px;
+}
 
-  #logo {
-    color: #ffcc00;
-    font-size: 32px;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 35%;
-  }
+#nav_bar {
+  position: fixed;
+  z-index: 5;
+  width: 100%;
+}
 
-  .right_link {
-    list-style-type: none;
-    float: right;
-  }
+.right_link {
+  margin-left: 25px;
+}
 
-  #current {
-    color: #ffcc00;
-  }
+.icon {
+  display: none;
+}
 
-  .title {
-    text-align: center;
-    color: #ffcc00;
-    font-size: 48px;
-    font-family: times;
-    font-weight: lighter;
-    margin: auto;
-    padding-top: 60px;
-  }
+#logo {
+  color: #ffcc00;
+  font-size: 32px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 22px;
+}
 
-  .Para_card {
+@keyframes toGrey {
+  0% {
     background-color: #232328;
-    border: 1px solid #ffcc00;
-    color: white;
-    font-size: 16px;
-    width: 50%;
-    height: auto;
-    padding: 20px;
-    padding-right: 20px;
-    margin: 40px;
+    transition-timing-function: ease;
   }
-
-  .cardTitle {
-    font-weight: 200;
-    font-size: 32px;
-    color: rgba(0, 153, 153, 1);
-  }
-
-  #about_cards {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  main {
-    font-family: times;
-  }
-
-  header {
-    font-family: times;
-  }
-
-  body {
-    margin: 0px;
-    background-image: url('../Space_Background.jpg');
-    background-size: 1920px 1080px;
-  }
-
-  .footer {
-    border-top: 2px solid #ffcc00;
-    background-color: #232328;
-    color: #ffcc00;
-    width: auto;
-    padding: 30px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 3fr;
-    grid-auto-rows: minmax(20px, auto);
-    grid-template-areas:
-        "head head head"
-        "Line1-1 Line1-2 Line1-3"
-        "Line2-1 Line2-2 Line2-3"
-        "Line3-1 Line3-2 Line3-3"
-        "Contact Contact2 Contact3"
-        "Copyright Copyright2 Copyright3";
-    gap: 10px 30px;
-  }
-
-  #head {
-    grid-area: head;
-    font-size: 24px;
-    border-bottom: 1px solid #232328;
-  }
-  #row1 {
-    grid-area: Line1-1;
-  }
-  #row2 {
-    grid-area: Line2-1;
-  }
-  #row3 {
-    grid-area: Line3-1;
-  }
-  #row1-2 {
-    grid-area: Line1-2;
-  }
-  #row2-2 {
-    grid-area: Line2-2;
-  }
-  #phone {
-    grid-area: Contact2;
-  }
-  #email {
-    grid-area: Contact;
-  }
-  #insta {
-    grid-area: Contact3;
+  100% {
+    background-color: dimgrey;
+    padding: 10px;
+    transition-timing-function: ease;
   }
 }
 
+#selection1 {
+  position: relative;
+}
 
-@media screen and (max-width: 600px) {
-  #nav_bar ul {
-    color: white;
-    background: #232328;
-    box-shadow: 0px 2px 0px 0px #ffcc00;
-    padding-inline-start: 0px;
-    margin-top: 0px;
-    font-size: 20px;
-  }
+#selection2 {
+  position: relative;
+}
 
-  #nav_bar ul li {
-    display: inline-block;
-    padding: 12px 24px;
-  }
+#selection1 a:hover {
+  animation: toGrey 2s 1;
+}
 
-  #nav_bar {
-    position: fixed;
-    z-index: 5;
-    width: 100%;
-  }
+#selection2 a:hover {
+  animation: toGrey 2s 1;
+}
 
-  .left_link {
-    list-style-type: none;
-  }
+#current {
+  color: #ffcc00;
+}
 
+.title {
+  text-align: center;
+  color: #ffcc00;
+  font-size: 48px;
+  font-family: times;
+  font-weight: lighter;
+  margin: 60px 0px 60px 0px;
+}
+
+.Para_card {
+  background-color: #232328;
+  border: 1px solid #ffcc00;
+  color: white;
+  font-size: 16px;
+  width: 50%;
+  height: auto;
+  padding: 20px;
+  padding-right: 20px;
+  margin: 40px;
+}
+
+.cardTitle {
+  font-weight: 200;
+  font-size: 32px;
+  color: rgba(0, 153, 153, 1);
+}
+
+#about_cards {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  font-family: times;
+}
+
+header {
+  font-family: times;
+}
+
+body {
+  margin: 0px;
+  background-image: url('../Space_Background.jpg');
+  background-size: 1920px 1080px;
+}
+
+.footer {
+  width: 100%;
+  border-top: 2px solid #ffcc00;
+  background-color: #232328;
+  color: #ffcc00;
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 3fr;
+  grid-auto-rows: minmax(20px, auto);
+  grid-template-areas:
+      "head head head"
+      "Line1-1 Line1-2 Line1-3"
+      "Line2-1 Line2-2 Line2-3"
+      "Line3-1 Line3-2 Line3-3"
+      "Contact Contact2 Contact3"
+      "Copyright Copyright2 Copyright3";
+  gap: 10px 30px;
+}
+
+#head {
+  grid-area: head;
+  font-size: 24px;
+  border-bottom: 1px solid #232328;
+}
+#row1 {
+  grid-area: Line1-1;
+}
+#row2 {
+  grid-area: Line2-1;
+}
+#row3 {
+  grid-area: Line3-1;
+}
+#row1-2 {
+  grid-area: Line1-2;
+}
+#row2-2 {
+  grid-area: Line2-2;
+}
+#phone {
+  grid-area: Contact2;
+}
+#email {
+  grid-area: Contact;
+}
+#insta {
+  grid-area: Contact3;
+}
+
+@media screen and (max-width: 720px) {
   #logo {
-    color: #ffcc00;
-    font-size: 32px;
     display: none;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 35%;
-  }
-
-  .right_link {
-    list-style-type: none;
-    float: right;
-  }
-
-  #current {
-    color: #ffcc00;
   }
 
   .title {
@@ -193,8 +194,8 @@
     font-size: 48px;
     font-family: times;
     font-weight: lighter;
-    margin: auto;
-    padding-top: 40px;
+    padding: 0px;
+    margin: 60px 0px 60px 0px;
   }
 
   .Para_card {
@@ -202,26 +203,28 @@
     border: 1px solid #ffcc00;
     color: white;
     font-size: 14px;
-    width: 50%;
+    width: 100%;
     height: auto;
-    padding: 20px;
     padding-right: 20px;
-    margin: 40px;
+    margin: 20px 0px 20px 0px;
+    box-sizing: border-box;
   }
 
   .cardTitle {
     font-weight: 200;
     font-size: 32px;
     color: rgba(0, 153, 153, 1);
+    text-align: center;
   }
 
   #about_cards {
-    margin: auto;
+    margin: 0;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
   }
 
   main {
@@ -238,7 +241,16 @@
     background-size: 1920px 1080px;
   }
 
+  footer a {
+    font-size: 12px;
+  }
+
+  footer div {
+    font-size: 12px;
+  }
+
   .footer {
+    box-sizing: border-box;
     border-top: 2px solid #ffcc00;
     background-color: #232328;
     color: #ffcc00;
@@ -256,34 +268,62 @@
         "Copyright Copyright2 Copyright3";
     gap: 10px 30px;
   }
+}
 
-  #head {
-    grid-area: head;
-    font-size: 24px;
-    border-bottom: 1px solid #232328;
+@media screen and (max-width: 480px) {
+  #current {
+    padding-left: 20px;
   }
-  #row1 {
-    grid-area: Line1-1;
+
+  #nav_whole {
+    background: #232328;
+    border-bottom: 1px solid #ffcc00;
+    padding-inline-start: 0px;
+    margin-top: 0px;
   }
-  #row2 {
-    grid-area: Line2-1;
+
+  #nav_bar a {
+    color: white;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: inline;
   }
-  #row3 {
-    grid-area: Line3-1;
+
+  #nav_bar a:hover {
+    background-color: dimgrey;
   }
-  #row1-2 {
-    grid-area: Line1-2;
+
+  .active {
+    background-color: #232328;
+    color: white;
   }
-  #row2-2 {
-    grid-area: Line2-2;
+
+  #nav_bar a.icon {
+    background: #232328;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: auto;
+    width: auto;
   }
-  #phone {
-    grid-area: Contact2;
+
+  #nav_bar a.icon:active {
+    background: dimgrey;
   }
-  #email {
-    grid-area: Contact;
+
+  #nav_links {
+    display: none;
+    padding: 10px 30px;
   }
-  #insta {
-    grid-area: Contact3;
+
+  #nav_bar {
+    overflow: hidden;
+    position: fixed;
+  }
+
+  .right_link {
+    font-size: 20px;
+    margin-right: 10px;
   }
 }
