--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .gallery_pages {
   padding: 0px;
 }
@@ -7,6 +11,13 @@
   display: block;
   margin: 0px;
   height: 50px;
+}
+
+#gallery {
+  border-top: 2px solid #ffcc00;
+  border-bottom: 5px groove #ffcc00;
+  background: linear-gradient(to top, rgba(56, 60, 71, 0.5), rgba(0, 0, 0, 0.5));
+  text-align: center;
 }
 
 #workExamples {
@@ -37,22 +48,48 @@
   list-style: outside none none;
 }
 
-.left_link {
-  list-style-type: none;
-}
-
 #logo {
   color: #ffcc00;
   font-size: 32px;
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-  top: 35%;
+  top: 22px;
 }
 
-.right_link {
-  list-style-type: none;
-  float: right;
+@keyframes toGrey {
+  0% {
+    background-color: #232328;
+    transition-timing-function: ease;
+  }
+  100% {
+    background-color: dimgrey;
+    padding: 10px;
+    transition-timing-function: ease;
+  }
+}
+
+#selection1 {
+  position: relative;
+}
+
+#selection2 {
+  position: relative;
+}
+
+#selection1 a:hover {
+  animation: toGrey 2s 1;
+}
+
+#selection2 a:hover {
+  animation: toGrey 2s 1;
+}
+
+#top-logo {
+  height: 250px;
+  display: block;
+  margin: auto;
+  margin-top: 60px;
 }
 
 .page_list {
@@ -99,7 +136,8 @@
 
 #I_Block {
   background: #232328;
-  box-shadow: 1px 0px 0px 2px #ffcc00;
+  border-bottom: 1px solid #ffcc00;
+  border-top: 1px solid #ffcc00;
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 0px;
@@ -117,24 +155,41 @@
   font-family: helveticaneue;
 }
 
-#nav_bar ul {
+#nav_whole {
   color: white;
   background: #232328;
-  box-shadow: 0px 2px 0px 0px #ffcc00;
+  border-bottom: 1px solid #ffcc00;
   padding-inline-start: 0px;
   margin-top: 0px;
   font-size: 20px;
+  padding: 10px;
+  padding-left: 20px;
 }
 
-#nav_bar ul li {
-  display: inline-block;
-  padding: 12px 24px;
+#nav_links {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: baseline;
+  right: 0;
+  top: 0px;
+  padding: 10px 20px;
 }
 
 #nav_bar {
   position: fixed;
   z-index: 5;
   width: 100%;
+}
+
+.right_link {
+  margin-left: 25px;
+}
+
+.icon {
+  display: none;
 }
 
 main {
@@ -156,7 +211,7 @@ body {
   border-top: 2px solid #ffcc00;
   background-color: #232328;
   color: #ffcc00;
-  width: auto;
+  width: 100%;
   padding: 30px;
   display: grid;
   grid-template-columns: 1fr 1fr 3fr;
@@ -201,7 +256,7 @@ body {
   grid-area: Contact3;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 720px) {
 
   .image_grid {
     padding: 60px;
@@ -244,10 +299,10 @@ body {
     transform: scale(1.4);
   }
 
-
   #I_Block {
     background: #232328;
-    box-shadow: 1px 0px 0px 2px #ffcc00;
+    border-bottom: 1px solid #ffcc00;
+    border-top: 1px solid #ffcc00;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 0px;
@@ -277,6 +332,18 @@ body {
     transform: scale(1.2);
   }
 
+  footer div a {
+    font-size: 12px;
+  }
+
+  footer div {
+    font-size: 12px;
+  }
+
+  #current {
+    padding-left: 20px;
+  }
+
   .footer {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
@@ -287,4 +354,57 @@ body {
         "Contact Contact2 Contact3"
         "Copyright Copyright2 Copyright3";
     gap: 10px 30px;
+  }
+
+    #nav_whole {
+      background: #232328;
+      border-bottom: 1px solid #ffcc00;
+      padding-inline-start: 0px;
+      margin-top: 0px;
+    }
+
+    #nav_bar a {
+      color: white;
+      padding: 10px 10px;
+      text-decoration: none;
+      display: inline;
+    }
+
+    #nav_bar a:hover {
+      background-color: dimgrey;
+    }
+
+    .active {
+      background-color: #232328;
+      color: white;
+    }
+
+    #nav_bar a.icon {
+      background: #232328;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: auto;
+      width: auto;
+    }
+
+    #nav_bar a.icon:active {
+      background: dimgrey;
+    }
+
+    #nav_links {
+      display: none;
+      padding: 10px 30px;
+    }
+
+    #nav_bar {
+      overflow: hidden;
+      position: fixed;
+    }
+
+    .right_link {
+      font-size: 20px;
+      margin-right: 10px;
+    }
 }
